# electrify-chicago

./: .dockerignore  .env  .env.example  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierignore  .stylelintrc.json  CLAUDE.md  CNAME  DATA_UPDATE_CHECKLIST.md  Dockerfile  OwnersRefactor.md  PULL_REQUEST_TEMPLATE.md  PythonDev.md  README.md  create_test_data.sh  docker-compose.yml  eslint.config.mjs  gridsome.config.js  gridsome.server.js  netlify.toml  package-lock.json  package.json  playwright.config.ts  process_data.sh  pyproject.toml  requirements-notebook.txt  requirements.txt  run_all.py  run_all.sh  tsconfig.json
.github/scripts/: README.md  comment-playwright-report.js  comment-playwright-report.ts  test-comment-script.ts
.github/workflows/: eslint.yml  linting.yml  playwright.yml  pytest.yml
debug/: test_emissions.py
e2e/: building-print-snapshots.spec.ts  building-snapshots.spec.ts  core-pages-snapshots.spec.ts  homepage-snapshots.spec.ts  listing-pages-snapshots.spec.ts  snapshots.spec.ts  test-utils.ts
scripts/: generateMissingSocialImages.ts  generateSocialImages.js  generateSocialImages.ts  generateTestSocialImages.js  generateTestSocialImages.ts  social-images-helpers.ts
src/: common-functions.js  common-functions.ts  common-functions.vue  google-maps-loader.ts  google-maps-loader.vue  main.js  template_buildings_to_img.csv
src/.temp/: config.js  icons.js  now.js  routes.js
src/components/: BarGraph.vue  BuildingImage.vue  BuildingTile.vue  BuildingsHero.vue  BuildingsMap.vue  BuildingsTable.vue  DataDisclaimer.vue  DataSourceFootnote.vue  EmailBuildingModal.vue  EmailModal.vue  EmissionsBreakdownGraph.vue  ExportButton.vue  GasCarEquivalent.vue  GlobalBanner.vue  HistoricalBuildingDataGraph.vue  HistoricalBuildingDataTable.vue  LetterGrade.vue  MetaInfoPanel.vue  NewTabIcon.vue  OverallRankEmoji.vue  OwnerLogo.vue  OwnerTile.vue  OwnersList.vue  PageSocialCard.vue  PieChart.vue  RankText.vue  ReportCard.vue  ReportingTile.vue  ShareButton.vue  SocialCard.vue  SparkLine.vue  StatTile.vue  WardLookup.vue  (+2 more)
src/data/research/docker/: .dockerignore  README.md  compose.yaml  dev.Dockerfile  pyproject.toml
static/: alders-info.csv  chicago-wards-2025.geojson
(+235 files in other folders)
