[project]
name = "electrify-chicago"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "python-slugify==4.0.1",
    "pandas==2.1.2",
    "scipy==1.11.3",
    "numpy",
    "pytest==7.4.4",
    "pytest-mock==3.14.0",
]


[project.optional-dependencies]
notebook = [
    "kaleido",
    "jupyterlab",
    "matplotlib",
    "ipywidgets",
    "nbconvert",
    "jupyter",
    "ipykernel"
]
