[project]
name = "electrify-chicago"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "python-slugify==4.0.1",
    "pandas==2.1.2",
    "scipy==1.11.3",
    "numpy",
    "pytest==7.4.4",
    "pytest-mock==3.14.0",
]


[project.optional-dependencies]
notebook = [
    "kaleido==0.2.1",
    "jupyterlab==4.3.5",
    "matplotlib==3.10.1",
    "ipywidgets==8.1.5",
    "nbconvert==7.16.6",
    "jupyter==1.1.1",
    "ipykernel==6.29.5",
    "plotly==6.0.0",
    "statsmodels==0.14.4"
]
