[tool.poetry]
name = "cst-dashboard"
package-mode = false
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dash-bootstrap-components = "^1.6.0"
dash-mantine-components = "^0.14.3"
pypdf = "^4.3.1"

[tool.poetry.group.dev.dependencies]
dash = "2.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
